--- a/styles/verhalen/droom.css
+++ b/styles/verhalen/droom.css
@@ -2,6 +2,7 @@
 
 p{
   line-height:1.4em;
+  z-index:10;
 }
 .verhalen{
   position: relative;
@@ -10,9 +11,67 @@ p{
 
 }
 
+
+button.liken{
+    position: absolute;
+    background-color:#ff4c4c;
+    border: none;
+    color:#fff;
+    padding: 0.45em;
+    cursor: pointer;
+    line-height: 1.1em;
+    font-size: 1em;
+    z-index:4;
+    top: 6.2%;
+    left: 80%;
+
+}
+button.liken:active{
+    position: absolute;
+    transform: scale(0.9, 0.9);
+}
+img#heartje{
+  float:left;
+  width:1.1em;
+  height:1.1em;
+  margin-right: 0.45em;
+  height:10%;
+}
+
+button.Add{
+    position: absolute;
+    background-color:#00BFFF;
+    border: none;
+    color: white;
+    padding: 0.35em;
+    cursor: pointer;
+    font-size: 1em;
+    top: 5%;
+    left: 77%;
+    z-index:4;
+}
+button.Add:active{
+    position: absolute;
+    transform: scale(0.9, 0.9);
+}
+img#toevoegen{
+  float:left;
+  width:1.3em;
+  height:1.3em;
+  margin-right: 0.35em;
+}
+
+.isLiked {
+  background-color: #003082 !important;
+}
+
+
 @media (min-width: 20em){
   .verhalen{
     font-size:0.6em;
+  }
+  button.Add{
+    top:8.6%;
   }
 
   /* verhalenontwerp Droom */
