--- a/styles/verhalen/hongerwinter.css
+++ b/styles/verhalen/hongerwinter.css
@@ -7,6 +7,7 @@ p{
   -webkit-user-select: none;
   -webkit-touch-callout:none;
   -webkit-text-size-adjust: none;
+  z-index: 10;
 }
 
 button.liken{
@@ -15,11 +16,9 @@ button.liken{
     border: none;
     color:#fff;
     padding: 0.45em;
-    /* width:6em; */
     cursor: pointer;
     line-height: 1.1em;
-    font-size: 1em;
-    z-index:4;
+    z-index:3;
 }
 button.liken:active{
     position: absolute;
@@ -30,6 +29,7 @@ img#heartje{
   width:1.1em;
   height:1.1em;
   margin-right: 0.45em;
+  height:10%;
 }
 
 button.Add{
@@ -39,8 +39,6 @@ button.Add{
     color: white;
     padding: 0.35em;
     cursor: pointer;
-    font-size: 1em;
-    left:30%;
     z-index:4;
 }
 button.Add:active{
@@ -63,6 +61,11 @@ img#toevoegen{
     font-size: 0.6em;
     line-height: 1.6em;
   }
+
+  button.Add{
+    top:12.5%
+  }
+
 
   #titelhongerwinter{
     position: absolute;
@@ -91,20 +94,20 @@ img#toevoegen{
 
   #hongerwinter-1{
     position: absolute;
-    top: 83vw;
+    top: 77vw;
     left:2em;
   }
 
   #hongerwinter-2{
     position: absolute;
-    top:155vw;
+    top:147vw;
     left:5em;
     width:18em;
   }
 
   #hongerwinter-3{
     position: absolute;
-    top: 303vw;
+    top: 293vw;
     left:5em;
   }
 
@@ -117,14 +120,14 @@ img#toevoegen{
 
   #hongerwinter-5{
     position: absolute;
-    top:392vw;
+    top:390vw;
     left:1em;
     width:18em;
   }
 
   #hongerwinter-6{
     position: absolute;
-    top: 480vw;
+    top: 476vw;
     width:19em;
     left:2em;
   }
@@ -139,6 +142,13 @@ img#toevoegen{
 }
 
 @media (min-width:45em){
+
+  button.Add{
+      left: 70%;
+  }
+  button.Liken{
+      left: 55%;
+  }
   #titelhongerwinter{
     position: absolute;
     top: 24vw;
@@ -282,5 +292,16 @@ img#toevoegen{
       position: absolute;
       top: 235vw;
       left:20em;
+    }
+
+    button.liken{
+        top: 10%;
+        left: 90%;
+        font-size: 1em;
+    }
+    button.Add{
+        top: 9.9%;
+        left: 77%;
+        font-size: 1em;
     }
 }
