Project web final
anticlimax: alle treinen liggen er nog uit maar bij deze presenteer ik de NS verhalen pagina voor al je vertragingen.

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,6 +123,7 @@ article>footer>small{
   display:flex;
   justify-content: space-between;
   align-items:baseline;
+  font-size: 0.6em;
 }
 
 @media (min-width:20em) {
